added dependencies and styles.

--- a/site/themes/scottish_american/css/mytheme.css
+++ b/site/themes/scottish_american/css/mytheme.css
@@ -559,7 +559,237 @@ section
     line-height: 20px;
     margin-top: 10px;
 }
+/*about us code added*/
+.about-us {
+    margin-top: 92px;
+}
+.about-us .title {
+    background-color: #892507;
+    width: 100%;
+    padding: 30px 0px;
+}
+.image {
+    position: relative;
+}
+.about-us .title img {
+    position: absolute;
+    top: 77px;
+    left: 80px;
+}
+.about-us .title h1 {
+    color: #fff;
+    text-align: center;
+    font-size: 167px;
+    font-weight: bold;
+    margin: 0px 0px;
+    text-transform: uppercase;
+    font-family: impact;
+    letter-spacing: 7px;
+}
+.about-us .title h3 {
+    color: #fff;
+    text-align: center;
+    font-size: 40px;
+    margin: 0px 0px;
+    text-transform: uppercase;
 
+
+}
+.about-us h2 {
+    font-size: 57px;
+    color: #9d3502;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.about-us h2:first-child {
+    margin-top: 80px;
+}
+.about-us p {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 80px;
+}
+ /*iphone*/
+@media only screen and (max-width: 1024px) {
+    .about-us .title img {
+        display: none;
+    }
+    .about-us p img{
+        display: inline-block;
+        height: auto;
+        max-width: 100%;
+    }
+}
+@media only screen and (max-width: 520px) {
+    .about-us .title img {
+    display: none;
+    }
+    .about-us .title h1 {
+        font-size: 95px;
+    }
+    .about-us .title h3 {
+        font-size: 28px;
+    }
+    .about-us h2 {
+        font-size: 32px
+    }
+    .about-us h2:first-child {
+        margin-top: 40px;
+    }
+    .about-us p {
+        font-size: 15px;
+        margin-bottom: 40px;
+    }
+    .about-us p img{
+        display: inline-block;
+        height: auto;
+        max-width: 100%;
+    }
+
+}
+ /*carrers code added*/
+
+@media only screen and (min-width: 1024px){
+    .careers-boxes {
+        padding: 0 200px;
+    }
+}
+
+.carrers .title{
+    background-color: #F3A72B;
+    width: 100%;
+    margin-bottom: 100px;
+    position: relative;
+}
+.carrers .title img {
+    position: absolute;
+    left: 0px;
+    top: 100px;
+}
+
+.carrers .title h1 {
+    font-size: 160px;
+    font-family: impact;
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 70px;
+}
+.carrers .title h3 {
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    margin-top: 45px;
+    margin-bottom: 0px;
+}
+.carrers h2 {
+    font-size: 72px;
+    text-transform: uppercase;
+    margin-bottom: 55px;
+    font-weight: bold;
+
+}
+.carrers p{
+    text-align: left;
+    font-size: 30px;
+    margin-bottom: 65px;
+}
+.carrers .title p {
+    text-align: center;
+}
+.carrers .images p {
+    text-align: center;
+}
+.carrers .information p{
+    text-align: center;
+    color: #428bca;
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+.careers-boxes {
+    margin-bottom: 65px;
+}
+ 
+ /*ipad*/
+ @media only screen and (max-width: 1024px){
+    .carrers .title{
+        margin-bottom: 60px;
+    }
+    .carrers .title img {
+        left: -270px; 
+    } 
+    .carrers .title h1 {
+        font-size: 120px;
+        margin-bottom: 40px;
+    }
+    .carrers .title h3 {
+        font-size: 35px;
+        margin-top: 65px;
+    }
+    .carrers h2 {
+        font-size: 62px;
+        margin-bottom: 20px;
+        margin-top: 0px;
+        text-align: center;
+    }
+    .carrers p {
+        font-size: 25px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .carrers .images p {
+        
+    }
+    .careers-boxes {
+        margin-bottom: 0px;
+    }
+    .carrers .information p{
+        margin-top: 20px;
+    }
+ }
+ @media only screen and (max-width: 1023px){
+    .carrers .title img {
+        display: none;
+    } 
+ }
+ /*iphone*/
+@media only screen and (max-width: 520px) {
+    .carrers .title{
+        margin-bottom: 30px;
+    }
+    .carrers .title img {
+        display: none 
+    } 
+    .carrers .title h1 {
+        font-size: 60px;
+        margin-bottom: 20px;
+    }
+    .carrers .title h3 {
+        font-size: 15px;
+        margin-top: 65px;
+    }
+    .carrers h2 {
+        font-size: 42px;
+        margin-bottom: 20px;
+        margin-top: 0px;
+        text-align: center;
+    }
+    .carrers p {
+        font-size: 15px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .carrers .images p img{
+        display: inline-block;
+        height: auto;
+        max-width: 100%;
+    }
+    .careers-boxes {
+        margin-bottom: 0px;
+    }
+}
 /* 
 #footer .online input{
 	border: 0px;
@@ -763,8 +993,8 @@ hr{
     left: 16px;
     width: 80%;
     height: 4px;
-	-webkit-transition: width 0.5s; /* Safari */
-    transition: width 0.5s;
+	-webkit-transition: width 0.4s ease-in-out; /* Safari */
+    transition: width 0.4s ease-in-out;
 }
 #menu2 .navbar-nav > li > a.active{
 	background: #2780c4;
@@ -823,7 +1053,8 @@ hr{
 #location{
 	font-family: 'Muli';
 	font-size: 24px;
-    margin: 25px 0 140px;
+    margin: 25px 0 0;
+    padding-bottom: 0;
 }
 #location .wrap{
     padding-left: 5%;
@@ -955,19 +1186,34 @@ hr{
     border: 5px solid #000;
 }
 
+.all-locations {
+    cursor: pointer;
+}
+
+.place-card .place-card-large {
+    display: none;
+}
+
 #map-container {
     position: relative;
     overflow: hidden;
 }
 
-.featherlight-inner h1{
+#mapia .featherlight-inner h2 {
     font-family: 'Impact';
     font-size: 100px;
     text-align: left;
     letter-spacing: 5px;
     color: #000;
     margin-top: 0px;
+    /*width: 65%;*/
+    margin-bottom: 0;
 }
+
+#mapia .featherlight-inner h2 + h2{
+    margin-bottom: 20px;
+}
+
 .featherlight-inner h1:nth-child(2){
 	margin-bottom: 35px;
 }
@@ -988,9 +1234,9 @@ hr{
     letter-spacing: 1px;
     color: #9b9999;
     padding-bottom: 0px;
-    margin: 0 0 1px;
+    margin: 0 0 10px;
 }
-.featherlight-inner p:nth-child(4){ margin-bottom:20px;}
+/*.featherlight-inner p:nth-child(4){ margin-bottom:10px;}*/
 .featherlight .featherlight-content {
     position: relative !important;
     text-align: left;
@@ -1005,10 +1251,8 @@ hr{
     max-height: 95%;
     background: #fff;
     cursor: auto;
-    white-space: normal;
-	-webkit-box-shadow: 20px 20px 0px 0px rgba(0,0,0,0.20);
-	-moz-box-shadow: 20px 20px 0px 0px rgba(0,0,0,0.20);
-	box-shadow: 20px 20px 0px 0px rgba(0,0,0,0.20);
+    white-space: normal;	
+	box-shadow: 15px 15px 0px 0px rgba(0,0,0,0.20);
 }
 .map-box{margin-left: -24% !important;}
 .featherlight .featherlight-close-icon {
@@ -1077,7 +1321,7 @@ hr{
 #location2 p {
     font-family: 'Muli';
     color: #000000;
-    font-size: 22px;
+    /* font-size: 22px; */
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
@@ -1092,17 +1336,20 @@ hr{
     color: #a2a2a2;
     font-weight: 100;
 }
+
 #location2 li a, #location2 li a:hover {
 	font-family: 'Muli';
     color: #000000;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
     letter-spacing: 1px;
 	width: 200px;
+    cursor: pointer;
 	
 }
+
 #location2 li ul {
     width: 100%;
     height: 100%;
@@ -1114,19 +1361,20 @@ hr{
 }
 #location2 li ul li a {
 	font-family: 'Muli';
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 100;
     color: #000000;
     text-decoration: none;
 	padding-left: 30px;
+    text-transform: none;
+    width: auto;
 }
-#location2 li ul li a:hover {
-	font-family: 'Muli';
-    font-size: 16px;
-    font-weight: 100;
+
+#location2 li ul li a:hover {  
     color: #2780c3;
     text-decoration: none;
-	padding-left: 30px;
+    text-transform: none;
+    width: auto;
 }
 #location2 li ul li a:focus {
 	font-weight: bold;
@@ -1141,10 +1389,12 @@ hr{
     font-weight: normal;
 }
 
-
+#people {
+    margin-top: 145px;
+}
 
 /*People*/
-#people {
+#people_bg {
     background: url("../img/my-people-bg.png"); 
     background-color: #e54d4f;
     height: 329px;
@@ -1155,8 +1405,9 @@ hr{
 	padding-bottom: 0;
     padding-top: 0;
 	background-size: cover;
+    margin-top: 45px;
 }
-#people .banner-bg {
+#people_bg .banner-bg {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -1164,7 +1415,7 @@ hr{
     margin: auto;
     z-index: 2;
 }
-#people h1 {
+#people_bg h1 {
     font-family: 'Impact';
     font-size: 160px;
     text-align: center;
@@ -1178,7 +1429,7 @@ hr{
     bottom: 0;
     transform: translateY(-40%);
 }
-#people h1 span {
+#people_bg h1 span {
     font-family: 'Muli-Bold';
     display: block;
     font-size: 37px;
@@ -1260,11 +1511,12 @@ hr{
 #mangatar{
 	font-family: 'Muli-Bold';
 	font-size: 18px;
+    padding-top: 0;
 	/* height: 100%; */
 }
 #mangatar ul{ 
 	margin: 0;
-    margin-left: -35px;
+    margin-left: 35px;
 }
 #mangatar .wrap{
 	margin: auto;
@@ -1277,6 +1529,7 @@ hr{
   margin-bottom: 135px;
  
 }
+
 /*#mangatar .left:nth-child(5n){
   margin-right: 0px;
 }*/
@@ -1599,34 +1852,35 @@ hr{
   padding-left: 0px;
   padding-right: 0px;
 }
+
+#circles .round a {
+    display: block;
+}
+
 #circles ul > li.round:first-child{
 	padding-left: 0px !important;
 }
+
+#circles li a {
+    display: block;
+    position: relative;
+}
+
 #circles .circle-o{
-	position: relative;
-    top: -350px;
+	position: absolute;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    width: 350px !important;
-    height: 350px;
+    width: 100%;
+    height: 100%;    
     background-color: rgba(143,2,71,0.75);
     border-radius: 50%;
 	cursor: pointer;
 	opacity: 0;
 }
 
-#circles .circle-o:hover{
-	position: relative;
-    top: -350px;
-    bottom: 0;
-    left: 0px;
-    right: 0;
-    width: 350px !important;
-    height: 350px;
-    background-color: rgba(143,2,71,0.75);
-    border-radius: 50%;
-	cursor: pointer;
+#circles li a:hover .circle-o{	
 	opacity: 1;
 }
 
@@ -2208,6 +2462,10 @@ hr{
 #filter-form .selectpicker{
     padding-right: 30px;	
 	}
+#filter-form .city_select, #filter-form .state_select {
+    padding-right: 0;
+    margin-bottom: 20px;
+}
 #filter-form .selectpicker .getquote{
 	background-color: #fff;
     color: #0672c3;
@@ -2526,6 +2784,7 @@ hr{
     letter-spacing: 5px;
     color: #000;
     margin-top: 0px;
+    /*width: 65%;*/
 }
 .featherlight-inner p {
     font-family: 'Muli';
@@ -3346,15 +3605,15 @@ div#bg-3-1 {
 			margin-left: -23px;
 			color: red;
 			position: relative;
-			top: 3px;
+			top: 15px;
 	}
 	#locate li.active a{
 		font-weight: bold;
-		color: #2780c3;
+		color: #000;
 	}
 	
-.show-drive{ display: block;}
-.hide-drive{ display: none;}
+/*.show-drive{ display: block;}*/
+/*.hide-drive{ display: none;}*/
 
 #target {
   display:none;
