Template files / Mods / Fixes.

--- a/site/themes/scottish_american/layouts/default.html
+++ b/site/themes/scottish_american/layouts/default.html
@@ -24,8 +24,10 @@
     <script type="text/javascript" src="{{ theme:js src='jquery.parallax' }}"></script>
     <script type="text/javascript" src="{{ theme:js src='jquery.localscroll.min' }}"></script>
     <script type="text/javascript" src="{{ theme:js src='jquery.scrollTo.min' }}"></script>
+    
     {{ theme:js  tag="true" }}
-    <!--<script type="text/javascript">
+    
+    <script type="text/javascript">
         jQuery(document).ready(function(){
             
             $(window).scroll(function(e){
@@ -37,6 +39,6 @@
                 $('#parallax-bg-3').css('top',(0-(scrolled*.75))+'px');
             }
          }); 
-    </script>-->
+    </script>
 </body>
 </html>
