--- a/site/themes/scottish_american/layouts/inner_pages.html
+++ b/site/themes/scottish_american/layouts/inner_pages.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="{{ theme:css src='bootstrap' }}" />
     <link href="{{ theme:css src='mytheme' }}" rel="stylesheet" />
     <link rel="stylesheet" href="{{ theme:css src='animate' }}" />
+    <link href="{{ theme:css src='featherlight.min.css' }}" rel="stylesheet" />
     <link rel="icon" href="favicon.ico">
-    <link href="//cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+    <!--<link href="//cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet" />-->
 </head>
 <body>
   {{ partial:nav }}
@@ -20,11 +21,11 @@
   </div> <!--#third-->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="//cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="{{ theme:js src='featherlight.min.js' }}"></script>
   <script src="{{ theme:js src='navAccordion.min' }}" type="text/javascript"></script>
   {{ theme:js  tag="true" }}
 
-  <script>
+  <!--<script>
     jQuery(document).ready(function(){
 
       //Accordion Nav
@@ -37,7 +38,7 @@
       });
       
     });
-  </script>
+  </script>-->
   <script type="text/javascript">
     $(document).ready(function(){
         var first_addr = $("ul#locate li.active:first").find('a').data('address');
@@ -84,40 +85,54 @@
           }          
         })
 
-        $('#show-carriers-list').click(function() {
-          $('#carriers-list').show(500);
-          $('#show-carriers-list').hide(0);
-          $('#hide-carriers-list').show(0);
-        });
+      $('#show-carriers-list').click(function() {
+        $('#carriers-list').show(500);
+        $('#show-carriers-list').hide(0);
+        $('#hide-carriers-list').show(0);
+      });
+
       $('#hide-carriers-list').click(function() {
         $('#carriers-list').hide(500);
         $('#show-carriers-list').show(0);
         $('#hide-carriers-list').hide(0);
       });
+
       $('.toggle').click(function() {
         $('#target').toggle('slow');
       });
 
       $(".dropdown-menu li a").click(function(){
         var selText = $(this).text();
+
         $(this).parents('.btn-group').find('.dropdown-toggle').html(selText+' <span class="caret"></span>');
-        $('html,body').animate({scrollTop: $("#boo").offset().top}, 'slow');
+
+        $('html,body').animate({scrollTop: $("#boo").offset().top}, 'slow');        
+
         $(".dropdown-menu li").show();
+
         $(this).parents('li').hide();
       });
 
       $("ul#customer-do li a").click(function(){
         var selText = $(this).text();
+        
         $(".dropdown-menu li a").parents('.btn-group').find('.dropdown-toggle').html(selText+' <span class="caret"></span>');
+
         $('html,body').animate({scrollTop: $("#boo").offset().top}, 'slow');
+
         $(".dropdown-menu li").show();
+
         $(this).parents('li').hide();
       });      
 
       $('.selectpicker ul li, ul#customer-do li').click(function() {
+        
         var i = $(this).index();
+
         var j = i + 1;
+
         $('.hide-drive').hide();
+
         $('#article' + j).show();
       });
     })
