--- a/site/themes/scottish_american/partials/alpha_list.html
+++ b/site/themes/scottish_american/partials/alpha_list.html
@@ -4,7 +4,8 @@
 		<h3 class="pb0 pt20">{{ letter }}</h3>
     	<ul class="list-unstyled pl30">
     {{ /if }}    
-		<li><a href="#{{ slug }}" target="_blank" title="{{ title }}">{{ title }}</a></li>
+		<!--<li><a href="#{{ slug }}" target="_blank" title="{{ title }}">{{ title }}</a></li>-->
+		<li>{{ title }}</li>
 	{{ if last }}
      	</ul>
     {{ /if }}		
