--- a/site/themes/scottish_american/partials/footer.html
+++ b/site/themes/scottish_american/partials/footer.html
@@ -4,19 +4,19 @@
 	        	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 text-left full">
 				<h4>Company Info</h4>
 	    		<ul class="list-unstyled">
-					<li><a href="/characters">Characters</a></li>
-					<li><a href="/careers">Careers</a></li>
-					<li><a href="/locations">Contact Us</a></li>
-					<li><a href="/locations">Locations</a></li>
-					<li><a href="/markets">Markets</a></li>
+					<li><a href="/about-us">About Us</a></li>
+					<li><a href="/locations-character#people">Characters</a></li>
+					<li><a href="/careers">Careers</a></li>					
+					<li><a href="/locations-character">Locations</a></li>
+					<li><a href="/partners">Partners</a></li>
 	            </ul>
 	        </div>
 
 	        	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 text-left full">
 			<h4>Customer Resources</h4>
 	    		<ul class="list-unstyled">
-					<li><a href="/customers">Get an Instant Quote</a></li>
-					<li><a href="/customers">Download Forms</a></li>
+					<li><a href="/customers#article1">Get an Instant Quote</a></li>
+					<li><a href="/customers#article2">Download Forms</a></li>
 					<li><a href="https://www.securevcheck.com/?id=yatesassoc" target="_blank">Make a Payment</a></li>
 	            </ul>
 	        </div>
@@ -26,7 +26,7 @@
 	        	<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-left full quote-box">
 				<h4>Instant Quote</h4>
 	    		<ul class="list-unstyled">
-					<li class="get"><a href="#">By Phone | East & West Coasts: (855) 689-6151 | Texas: (844) 5008-1072</a></li>
+					<li class="get"><a href="#">By Phone | East & West Coasts: (855) 689-6151 | Texas: (844) 508-1072</a></li>
 					<li class="get"><a href="#">Monday-Friday 6a-7p CST, Saturday 8a-12p CST</a></li>
 	            </ul>
 				<div class="clearfix"></div>
@@ -34,7 +34,7 @@
 					Online quote available 24/7
 				</div>
 				<div class="">
-					<button href="#" type="submit" class="btn btn-default get-now">Get Now</button>
+					<button href="/customers?#get-a-quote" type="submit" class="btn btn-default get-now">Get Now</button>
 				</div>
 	        </div>
 
