--- a/site/themes/scottish_american/templates/locations.html
+++ b/site/themes/scottish_american/templates/locations.html
@@ -19,33 +19,36 @@
 			<div id="location2">
 				<nav class="mainNav">
 				
-				<p>ALL LOCATIONS 
-					<span>
-						{{ collection from="business-location" }}
-							{{ if index == 1 }}
-								{{ total_results }}
-							{{ /if }}
-						{{ /collection }}
-					</span>
-				</p>
+					<p class="all-locations">ALL LOCATIONS 
+						<span>
+							{{ collection from="business-location" }}
+								{{ if index == 1 }}
+									{{ total_results }}
+								{{ /if }}
+							{{ /collection }}
+						</span>
+					</p>
 
 					<ul>
-						{{ taxonomy:state collection="business-location" sort="title|desc" scope="cat" }}
+						{{ taxonomy:state collection="business-location" sort="title:asc" scope="cat" }}
 						  
 						  <!-- <li {{ if first }} class="selected" {{ /if }}> -->
 						  <li>
 
-						  	<a href="#">{{ cat:title }}</a>
+						  	<a >{{ cat:title }}</a>
 
 						  <ul id="locate">
 
-						    {{ collection }}
+						    {{ collection sort="title:asc"}}
 						       <li {{ if index == 1 }}class="active"{{ /if }}>
 							   
-							   <a href="#" data-address="{{ address }}" data-featherlight="#addess-pop-{{ count }}{{ index }}" data-city="{{ title }}" data-state="{{ cat:title }}" data-featherlight-root="#mapia" data-featherlight-close-on-click="anywhere">{{ title }}</a>
+							   <a href="#" data-address="{{ address }}" data-featherlight="#addess-pop-{{ count }}{{ index }}" data-city="{{ title }}" data-state="{{ cat:title }}" data-featherlight-root="#mapia">
+								   {{ title }}
+								</a>
 
 				                    <div class="lightbox lightbox-location" id="addess-pop-{{ count }}{{ index }}">
-				                    	<h1>{{ title }}</h1>
+									
+										<h2>{{ title | title }}</h2>																													<h2>{{ cat:title }}</h2>					
 
 				                        <p>{{ address }}</p>
 				                        	
@@ -80,7 +83,11 @@
 	</div>
 </section>
 
-<section id="people" style="background-image: url({{ assets:image_of_section_divider }}{{ url }}{{ /assets:image_of_section_divider }});">
+<div id="people">
+	&nbsp;
+</div>
+
+<section id="people_bg" style="background-image: url({{ assets:image_of_section_divider }}{{ url }}{{ /assets:image_of_section_divider }});">
 	<div class="container">
 		<div class="row"> 
 			<div> 
@@ -95,16 +102,60 @@
 <section id="filter">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-12">
-				<form class="form-inline"> 
+			
+				<form class="form-inline" id="filter-form"> 
 					<div class="form-group">
-						<label for="email">FILTER BY</label>
-						<input type="text" class="form-control" id="city" name="city" placeholder="CITY" value="{{ get:city }}" />
-						<input type="text" class="form-control" id="state" name="state" placeholder="STATE" value="{{ get:state }}" />
-						<button type="button" id="search-people" class="btn btn-default">SEARCH</button>
+						<div class="col-lg-3">
+
+							<label for="email" style="margin-top: 9px;">FILTER BY</label>
+						</div>
+						
+
+						<div class="col-lg-4">
+							<div class="btn-group selectpicker btn-block city_select">
+								
+								<a class="btn btn-primary dropdown-toggle getquote" data-toggle="dropdown" href="#">
+									CITY 
+									<span class="caret"></span>
+								</a>
+								
+								<ul class="dropdown-menu filter_group">
+									{{ taxonomy:state collection="business-location" sort="title:asc" scope="cat" }}
+										{{ collection sort="title:asc"}}
+											<li>
+												<a href="#" data-filter=".{{ title }}">{{ title }}</a>
+											</li>
+										{{ /collection }}
+									{{ /taxonomy:state }}
+								</ul>
+							</div>
+						</div>
+
+						<div class="col-lg-4">
+							<div class="btn-group selectpicker btn-block state_select">
+								<a class="btn btn-primary dropdown-toggle getquote" data-toggle="dropdown" href="#">
+									STATE
+									<span class="caret"></span>
+								</a>
+								<ul class="dropdown-menu filter_group">
+									{{ taxonomy:state collection="business-location" sort="title:asc" scope="cat" }}								
+										<li>
+											<a href="#" data-filter=".{{ cat:title }}">{{ cat:title }}</a>
+										</li>
+									{{ /taxonomy:state }}
+								</ul>
+							</div>
+						</div>
+						
+						<!--<input type="text" class="form-control" id="city" name="city" placeholder="CITY" value="{{ get:city }}" />-->
+						<!--<input type="text" class="form-control" id="state" name="state" placeholder="STATE" value="{{ get:state }}" />-->
+						<!--<div class="col-lg-2">
+
+							<button type="button" id="search-people" class="btn btn-default btn-block">SEARCH</button>
+						</div>-->
 					</div>
 				</form>
-			</div>
+			
       	</div>
     </div>
 </section>
@@ -116,7 +167,10 @@
 
 				{{ collection from="employees" }}
 
-					<li class="left round" {{ relate:business_location }}data-city="{{ title }}" data-state="{{ relate:state }} {{ title }} {{ /relate:state }}" {{ /relate:business_location }}>
+					<!--<li class="left round" {{ relate:business_location }} data-city="{{ title }}" data-state="{{ relate:state }} {{ title }} {{ /relate:state }}" {{ /relate:business_location }}>-->
+
+					<li class="left round {{ relate:business_location }} {{ title }} {{ relate:state }} {{ title }} {{ /relate:state }} {{ /relate:business_location }}">					
+					
 
 						<a href="#" data-featherlight="#mangatar{{ index }}">
 							<img src="{{ assets:picture }}{{ url }}{{ /assets:picture }}" alt="{{ title }}" />
@@ -131,7 +185,7 @@
 							<div class="people-R">
 								<h1>{{ title }}</h1>
 								<h3>{{ job }}</h3>
-								{{ address }}
+								<p>{{ address }}</p>
 								<p>{{ email_address }}</p>
 								<p>{{ phone_number }}</p>
 							</div>
