--- a/site/themes/scottish_american/layouts/default.html
+++ b/site/themes/scottish_american/layouts/default.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="{{ theme:js src='jquery.parallax' }}"></script>
     <script type="text/javascript" src="{{ theme:js src='jquery.localscroll.min' }}"></script>
     <script type="text/javascript" src="{{ theme:js src='jquery.scrollTo.min' }}"></script>
+    <script src="{{ theme:js src='jquery.animateHeadlines.js' }}"></script>
     
     {{ theme:js  tag="true" }}
     
