fixed right position slider.

--- a/site/themes/scottish_american/css/mytheme.css
+++ b/site/themes/scottish_american/css/mytheme.css
@@ -208,6 +208,7 @@ section {
   position: absolute;
   white-space: nowrap;
   left: 0;
+  right: 0;
   top: 0;
 }
 .cd-words-wrapper b.is-visible {
