--- a/site/themes/scottish_american/css/mytheme.css
+++ b/site/themes/scottish_american/css/mytheme.css
@@ -1269,8 +1269,8 @@ hr {
     border-radius: 50%;
     transition: .4s left ease-in; } }
 #mapia {
-  width: 894px;
-  height: 894px;
+  width: 100%;
+  height: 607px;
   float: left;
   position: relative;
   border: 5px solid #000; }
@@ -1287,9 +1287,9 @@ hr {
 
 #mapia .featherlight-inner h2 {
   font-family: 'Impact';
-  font-size: 100px;
+  font-size: 75px;
   text-align: left;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
   color: #000;
   margin-top: 0px;
   /*width: 65%;*/
@@ -3422,8 +3422,9 @@ div#bg-3-1 {
 -----------------------------------------------*/
 .mainNav {
   /* background: #222; */
-  width: 30%;
-  float: left; }
+  /* width: 30%; */
+  /* float: left;  */
+}
 
 /* First Level */
 .mainNav ul {
