styles and tags.

--- a/site/themes/scottish_american/partials/footer.html
+++ b/site/themes/scottish_american/partials/footer.html
@@ -34,7 +34,9 @@
 					Online quote available 24/7
 				</div>
 				<div class="">
-					<button href="/customers?#get-a-quote" type="submit" class="btn btn-default get-now">Get Now</button>
+					<a href="/customers?#get-a-quote" type="submit" class="btn btn-default get-now">
+						Start Quoting
+					</a>
 				</div>
 	        </div>
 
