--- a/site/themes/scottish_american/templates/customers.html
+++ b/site/themes/scottish_american/templates/customers.html
@@ -97,7 +97,7 @@
       <div id="download-form" class="container ui-tabs-panel ui-tabs-hide">
         <div id="filter-form" class="row">
           <h1>Forms and applications</h1>
-              <div class="col-lg-12"> 
+              <!-- <div class="col-lg-12"> 
                       <form action="" method="GET" class="form-inline">
                         <div class="form-group">
                           <label for="email">DISPLAY PER PAGE</label>
@@ -113,10 +113,10 @@
                           <button type="submit" class="btn btn-default">SEARCH</button>
                         </div>
                     </form>
-                </div>
+                </div> -->
 
                 {{ collection:download-forms limit="25" paginate="true" as="posts" sort="title:asc" }}
-                  <div class="col-lg-12 pt60 prl10">
+                  <div class="col-lg-12 pt40 prl10">
                     <div class="table-responsive">
                       <table class="table">
                         <thead>
