fixes for responsive tablets/ fixes for navigation / locations fixes.

--- a/site/themes/scottish_american/partials/nav.html
+++ b/site/themes/scottish_american/partials/nav.html
@@ -26,7 +26,7 @@
                     {{if index == 3}}
 
                         <li {{ if is_current or is_parent }}class="active"{{ /if }}>
-                            <a class="page-scroll" href="/locations-character#people">
+                            <a class="page-scroll" href="/locations-character#people_bg">
                                 {{ tag:nav_title or title }}
                             </a>
                         </li>
