--- a/site/themes/scottish_american/layouts/locations.html
+++ b/site/themes/scottish_american/layouts/locations.html
@@ -113,7 +113,7 @@
           
           $("ul-lightbox-people li").hide('slow', function(){
             $("ul.ul-lightbox-people li[data-city='"+ business_city +"'][data-state='"+ business_state +"']").show('slow');
-            //$("ul.ul-lightbox-people li").data('city', business_city).data('state', business_state).show();
+            $("ul.ul-lightbox-people li").data('city', business_city).data('state', business_state).show();
           });
 
           e.preventDefault();
@@ -211,6 +211,17 @@
       });
 
     });
+  </script>
+
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-39018943-3', 'auto');
+      ga('send', 'pageview');
+
   </script>
 
 
